--- a/style.css
+++ b/style.css
@@ -1,15 +1,36 @@
 body {
     height: 97vh;
     font-family: 'Roboto', sans-serif;
+    display:flex;
+    flex-direction: column;
+}
+
+.header, .footer{
+    height: 8vh;
+    background-color: black;
+    font-size: 1vh;
+}
+
+.footer a {
+    color: white;
+    text-decoration: none;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .container {
+    flex:1;
     display: grid;
     grid-template-columns: minmax(100px, 1fr) 3fr;
     grid-template-rows: minmax(50px, 1fr) 4fr;
 }
 
-.sidebar, .topbar, .main {
+.topbar, .content {
     border-style: dashed;
 }
 
