--- a/style.css
+++ b/style.css
@@ -148,7 +148,44 @@ img {
     width:7vw;
 }
 
-
+.projectsContainer, .announcementsContainer, .trendingContainer {
+    border: 5px darkorange dotted
+}
 .content {
     background-color: lightgrey;
+    display: grid;
+    grid-template-columns: auto auto;
+    padding: 1vw;
+
+}
+
+.projectsContainer {
+    grid-row: 1 / 3;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.projects {
+    
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px,1fr));
+    gap: 5px;
+    padding: 5px;
+}
+
+.project {
+    display:flex;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),
+    0 4px 8px 0 rgba(0,0,0,0.19);
+    border-radius: 10px;
+    padding: 5px;
+    border-left: 5px orange solid;
+}
+
+.summary {
+    color:rgba(0, 0, 0, 0.6);
+    flex:1;
 }
